--- a/basic-html.html
+++ b/basic-html.html
@@ -6,8 +6,7 @@
   <title>JS Bin</title>
 </head>
 <body>
-<h1> 
-  Hello, my name is Youssef, and I am an 11th grader in HSTAT. I am in the software engineering program
-</h1>
+<h1> Hello :</h1>
+<h2> My name is Youssef, and I am an 11th grader in HSTAT. I am in the software engineering program</h2>
 </body>
 </html>
